--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "dynatrace-email-reporter",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "test": "echo 'No tests defined. Skipping...'"
   },
   "keywords": [],
-  "author": "",
+  "author": "Vishruth Harithsa",
   "license": "ISC",
   "type": "module",
   "dependencies": {
