Add new feature to process user input
Implemented a function to handle and validate user input in the main application module. This improves input reliability and prepares the codebase for future enhancements.

--- a/package.json
+++ b/package.json
@@ -1,19 +1,29 @@
 {
   "name": "dynatrace-email-reporter",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "test": "echo 'No tests defined. Skipping...'"
   },
-  "keywords": [],
+  "keywords": ["EmailReporter","EmailWithAttachments"],
   "author": "Vishruth Harithsa",
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "dotenv": "^17.0.0",
+    "@grpc/grpc-js": "^1.13.4",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.60.1",
+    "@opentelemetry/exporter-trace-otlp-grpc": "^0.202.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.202.0",
+    "@opentelemetry/exporter-trace-otlp-proto": "^0.202.0",
+    "@opentelemetry/instrumentation": "^0.202.0",
+    "@opentelemetry/resources": "^1.27.0",
+    "@opentelemetry/sdk-node": "^0.202.0",
+    "dotenv": "^17.0.1",
     "express": "^5.1.0",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.4",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
