--- a/.github/workflows/main_gen3emailreporting.yml
+++ b/.github/workflows/main_gen3emailreporting.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js app to Azure Web App - gen3emailreporting
 
 on:
@@ -13,7 +10,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read
 
     steps:
       - uses: actions/checkout@v4
@@ -41,7 +38,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
@@ -50,7 +47,7 @@ jobs:
 
       - name: Unzip artifact for deployment
         run: unzip release.zip
-      
+
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
@@ -59,3 +56,16 @@ jobs:
           slot-name: 'Production'
           package: .
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_702906AE83C54163AD1E25C938495ED9 }}
+
+      # ✅ NEW: Run OTEL trace CLI and ingest logs
+      - name: Emit GitHub pipeline trace to Dynatrace
+        env:
+          DYNATRACE_API_TOKEN: ${{ secrets.DYNATRACE_API_TOKEN }}
+          DYNATRACE_LOG_INGEST_URL: ${{ secrets.DYNATRACE_LOG_INGEST_URL }}
+          DYNATRACE_OTLP_URL: ${{ secrets.DYNATRACE_OTLP_URL }}
+        run: |
+          node trace-cli.js
+
+      # (Optional) View logs if needed
+      - name: Show OTEL CLI logs
+        run: cat logs/pipeline.log || echo "No pipeline log found"
