--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "start": "node index.js",
     "test": "echo 'No tests defined. Skipping...'"
   },
-  "keywords": ["EmailReporter","EmailWithAttachments"],
+  "keywords": [
+    "EmailReporter",
+    "EmailWithAttachments"
+  ],
   "author": "Vishruth Harithsa",
   "license": "ISC",
   "type": "module",
@@ -19,8 +22,9 @@
     "@opentelemetry/exporter-trace-otlp-http": "^0.202.0",
     "@opentelemetry/exporter-trace-otlp-proto": "^0.202.0",
     "@opentelemetry/instrumentation": "^0.202.0",
-    "@opentelemetry/resources": "^1.27.0",
+    "@opentelemetry/resources": "^1.30.1",
     "@opentelemetry/sdk-node": "^0.202.0",
+    "@opentelemetry/sdk-trace-node": "^2.0.1",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
     "node-fetch": "^3.3.2",
