--- a/.github/workflows/main_gen3emailreporting.yml
+++ b/.github/workflows/main_gen3emailreporting.yml
@@ -13,7 +13,7 @@ jobs:
       contents: read
 
     steps:
-      - name: Checkout Code
+      - name: 📥 Checkout Code
         uses: actions/checkout@v4
 
       - name: ⚙️ Set Environment Variables
@@ -61,20 +61,23 @@ jobs:
     needs: build
 
     steps:
+      - name: 📥 Checkout Code
+        uses: actions/checkout@v4
+
       - name: ⚙️ Set Environment Variables
         run: |
           echo "DYNATRACE_API_TOKEN=${{ secrets.DYNATRACE_API_TOKEN }}" >> $GITHUB_ENV
           echo "DYNATRACE_OTLP_URL=${{ secrets.DYNATRACE_OTLP_URL }}" >> $GITHUB_ENV
           echo "DYNATRACE_LOG_INGEST_URL=${{ secrets.DYNATRACE_LOG_INGEST_URL }}" >> $GITHUB_ENV
 
+      - name: ⬇️ Install OpenTelemetry CLI Dependencies
+        run: npm install @opentelemetry/sdk-node @opentelemetry/api @opentelemetry/resources @opentelemetry/semantic-conventions @opentelemetry/exporter-trace-otlp-proto dotenv node-fetch winston
+
       - name: 📥 Download Artifact
         uses: actions/download-artifact@v4
         with:
           name: node-app
 
-      - name: ⬇️ Install OpenTelemetry CLI Dependencies
-        run: npm install @opentelemetry/sdk-node @opentelemetry/api @opentelemetry/resources @opentelemetry/semantic-conventions @opentelemetry/exporter-trace-otlp-proto dotenv node-fetch winston
-        
       - name: 📂 Unzip Artifact
         run: |
           node trace-cli.js start --step="Unzip Artifact"
@@ -85,7 +88,7 @@ jobs:
         run: |
           node trace-cli.js start --step="Azure Deployment"
           echo "Deploying to Azure Web App..."
-          # Replace below with actual deploy if needed
+          # Actual deploy logic goes here
           echo "Deployment done"
           node trace-cli.js end --step="Azure Deployment"
 
