--- a/.github/workflows/main_gen3emailreporting.yml
+++ b/.github/workflows/main_gen3emailreporting.yml
@@ -2,15 +2,12 @@ name: Build and deploy Node.js app to Azure Web App - gen3emailreporting
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
     env:
       CICD_TRACE_TYPE: build
 
@@ -18,20 +15,17 @@ jobs:
       - name: 🧾 Checkout Code
         uses: actions/checkout@v4
 
-      - name: ⚙️ Set Environment Variables
+      - name: ⚙️ Set Secrets as Env Variables
         run: |
           echo "DYNATRACE_API_TOKEN=${{ secrets.DYNATRACE_API_TOKEN }}" >> $GITHUB_ENV
           echo "DYNATRACE_OTLP_URL=${{ secrets.DYNATRACE_OTLP_URL }}" >> $GITHUB_ENV
           echo "DYNATRACE_LOG_INGEST_URL=${{ secrets.DYNATRACE_LOG_INGEST_URL }}" >> $GITHUB_ENV
 
-      - name: 🧬 Generate Shared Trace ID
-        run: echo "TRACE_ID=$(uuidgen | tr 'A-Z' 'a-z' | tr -d '-')" >> $GITHUB_ENV
-
-      - name: ⬇️ Install CLI Dependencies
+      - name: ⬇️ Install Trace CLI Dependencies
         run: npm install @opentelemetry/sdk-node @opentelemetry/api @opentelemetry/resources @opentelemetry/semantic-conventions @opentelemetry/exporter-trace-otlp-proto dotenv node-fetch winston
 
-      - name: 🚀 Start Build Trace
-        run: node trace-cli.js start --step="Build Start"
+      - name: 🚀 Start Trace
+        run: node trace-cli.js start --step="Build Trace Start"
 
       - name: 📦 Install App Dependencies
         run: |
@@ -39,14 +33,14 @@ jobs:
           npm install
           node trace-cli.js end --step="Install Dependencies"
 
-      - name: 🏗️ Build and Test
+      - name: 🧪 Build and Test
         run: |
           node trace-cli.js start --step="Build and Test"
           npm run build --if-present
           npm run test --if-present
           node trace-cli.js end --step="Build and Test"
 
-      - name: 🗜️ Zip Release (including CLI)
+      - name: 🗜️ Zip Release
         run: |
           node trace-cli.js start --step="Zip Artifact"
           zip release.zip . -r -x "node_modules/*" -x ".git/*"
@@ -59,7 +53,7 @@ jobs:
           path: release.zip
 
       - name: 🛑 End Build Trace
-        run: node trace-cli.js end --step="Build End"
+        run: node trace-cli.js end --step="Build Trace End"
 
   deploy:
     runs-on: ubuntu-latest
@@ -68,23 +62,20 @@ jobs:
       CICD_TRACE_TYPE: deploy
 
     steps:
-      - name: 🧾 Checkout Code (for CLI script)
+      - name: 🧾 Checkout Code
         uses: actions/checkout@v4
 
-      - name: ⚙️ Set Environment Variables
+      - name: ⚙️ Set Secrets as Env Variables
         run: |
           echo "DYNATRACE_API_TOKEN=${{ secrets.DYNATRACE_API_TOKEN }}" >> $GITHUB_ENV
           echo "DYNATRACE_OTLP_URL=${{ secrets.DYNATRACE_OTLP_URL }}" >> $GITHUB_ENV
           echo "DYNATRACE_LOG_INGEST_URL=${{ secrets.DYNATRACE_LOG_INGEST_URL }}" >> $GITHUB_ENV
 
-      - name: 🧬 Generate Shared Trace ID
-        run: echo "TRACE_ID=$(uuidgen | tr 'A-Z' 'a-z' | tr -d '-')" >> $GITHUB_ENV
-
-      - name: ⬇️ Install CLI Dependencies
+      - name: ⬇️ Install Trace CLI Dependencies
         run: npm install @opentelemetry/sdk-node @opentelemetry/api @opentelemetry/resources @opentelemetry/semantic-conventions @opentelemetry/exporter-trace-otlp-proto dotenv node-fetch winston
 
       - name: 🚀 Start Deploy Trace
-        run: node trace-cli.js start --step="Deploy Start"
+        run: node trace-cli.js start --step="Deploy Trace Start"
 
       - name: 📥 Download Artifact
         uses: actions/download-artifact@v4
@@ -97,13 +88,12 @@ jobs:
           unzip -o release.zip
           node trace-cli.js end --step="Unzip Artifact"
 
-      - name: 🚀 Azure Web App Deploy
+      - name: 🚀 Deploy to Azure
         run: |
           node trace-cli.js start --step="Azure Deployment"
-          echo "Deploying to Azure Web App..."
-          # Actual deployment logic can go here
+          echo "Deploying to Azure..."
           echo "Deployment done"
           node trace-cli.js end --step="Azure Deployment"
 
       - name: 🛑 End Deploy Trace
-        run: node trace-cli.js end --step="Deploy End"
+        run: node trace-cli.js end --step="Deploy Trace End"
