--- a/.github/workflows/main_gen3emailreporting.yml
+++ b/.github/workflows/main_gen3emailreporting.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy Node.js App with Dynatrace Tracing
+name: Build and Deploy with Dynatrace Tracing
 
 on:
   push:
@@ -9,11 +9,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     outputs:
-      trace_id: ${{ steps.set-trace.outputs.trace_id }}
-      parent_span_id: ${{ steps.set-trace.outputs.parent_span_id }}
+      trace_id: ${{ steps.start_trace.outputs.trace_id }}
+      parent_span_id: ${{ steps.start_trace.outputs.parent_span_id }}
 
     steps:
-      - name: 🧾 Checkout Code
+      - name: 📜 Checkout Code
         uses: actions/checkout@v4
 
       - name: ⚙️ Set Secrets as Env Variables
@@ -26,50 +26,47 @@ jobs:
         run: npm install @opentelemetry/sdk-node @opentelemetry/api @opentelemetry/resources @opentelemetry/semantic-conventions @opentelemetry/exporter-trace-otlp-proto dotenv node-fetch winston
 
       - name: 🚀 Start Build Trace
-        id: set-trace
+        id: start_trace
         run: |
-          TRACE_OUTPUT=$(node trace-cli.js start --step="Build Trace Start")
+          TRACE_OUTPUT=$(node trace-cli.js start --step="Build Start" --endpoint="build")
           echo "$TRACE_OUTPUT"
-          echo "$TRACE_OUTPUT" | grep '^trace_id=' | sed 's/trace_id=//' | xargs -I{} echo "trace_id={}" >> $GITHUB_OUTPUT
-          echo "$TRACE_OUTPUT" | grep '^parent_span_id=' | sed 's/parent_span_id=//' | xargs -I{} echo "parent_span_id={}" >> $GITHUB_OUTPUT
+          echo "$TRACE_OUTPUT" | grep trace_id | sed 's/trace_id=//' | xargs -I{} echo "trace_id={}" >> $GITHUB_OUTPUT
+          echo "$TRACE_OUTPUT" | grep parent_span_id | sed 's/parent_span_id=//' | xargs -I{} echo "parent_span_id={}" >> $GITHUB_OUTPUT
 
-      - name: 📦 Install App Dependencies
+      - name: 💼 Install Dependencies
         run: |
-          node trace-cli.js start-child --step="Install Dependencies" --trace-id=${{ steps.set-trace.outputs.trace_id }} --parent-span-id=${{ steps.set-trace.outputs.parent_span_id }}
+          node trace-cli.js start-child --step="Install Dependencies" --trace-id="${{ steps.start_trace.outputs.trace_id }}" --parent-span-id="${{ steps.start_trace.outputs.parent_span_id }}" --endpoint="build"
           npm install
-          node trace-cli.js end-child --step="Install Dependencies" --trace-id=${{ steps.set-trace.outputs.trace_id }}
+          node trace-cli.js end-child --step="Install Dependencies" --trace-id="${{ steps.start_trace.outputs.trace_id }}"
 
-      - name: 🧪 Build and Test
+      - name: 🧐 Build and Test
         run: |
-          node trace-cli.js start-child --step="Build and Test" --trace-id=${{ steps.set-trace.outputs.trace_id }} --parent-span-id=${{ steps.set-trace.outputs.parent_span_id }}
+          node trace-cli.js start-child --step="Build and Test" --trace-id="${{ steps.start_trace.outputs.trace_id }}" --parent-span-id="${{ steps.start_trace.outputs.parent_span_id }}" --endpoint="build"
           npm run build --if-present
           npm run test --if-present
-          node trace-cli.js end-child --step="Build and Test" --trace-id=${{ steps.set-trace.outputs.trace_id }}
+          node trace-cli.js end-child --step="Build and Test" --trace-id="${{ steps.start_trace.outputs.trace_id }}"
 
-      - name: 🗜️ Zip Release
+      - name: 📋 Zip Artifact
         run: |
-          node trace-cli.js start-child --step="Zip Artifact" --trace-id=${{ steps.set-trace.outputs.trace_id }} --parent-span-id=${{ steps.set-trace.outputs.parent_span_id }}
+          node trace-cli.js start-child --step="Zip Artifact" --trace-id="${{ steps.start_trace.outputs.trace_id }}" --parent-span-id="${{ steps.start_trace.outputs.parent_span_id }}" --endpoint="build"
           zip release.zip . -r -x "node_modules/*" -x ".git/*"
-          node trace-cli.js end-child --step="Zip Artifact" --trace-id=${{ steps.set-trace.outputs.trace_id }}
+          node trace-cli.js end-child --step="Zip Artifact" --trace-id="${{ steps.start_trace.outputs.trace_id }}"
 
-      - name: ⬆️ Upload App Artifact
+      - name: ⬆️ Upload Artifact
         uses: actions/upload-artifact@v4
         with:
           name: node-app
           path: release.zip
 
       - name: 🛑 End Build Trace
-        run: node trace-cli.js end --step="Build Trace End" --trace-id=${{ steps.set-trace.outputs.trace_id }}
+        run: node trace-cli.js end --step="Build" --trace-id="${{ steps.start_trace.outputs.trace_id }}" --endpoint="build"
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    env:
-      TRACE_ID: ${{ needs.build.outputs.trace_id }}
-      PARENT_SPAN_ID: ${{ needs.build.outputs.parent_span_id }}
 
     steps:
-      - name: 🧾 Checkout Code
+      - name: 📜 Checkout Code
         uses: actions/checkout@v4
 
       - name: ⚙️ Set Secrets as Env Variables
@@ -81,26 +78,27 @@ jobs:
       - name: ⬇️ Install Trace CLI Dependencies
         run: npm install @opentelemetry/sdk-node @opentelemetry/api @opentelemetry/resources @opentelemetry/semantic-conventions @opentelemetry/exporter-trace-otlp-proto dotenv node-fetch winston
 
-      - name: 📥 Download App Artifact
+      - name: 🚀 Start Deploy Trace
+        run: |
+          node trace-cli.js start --step="Deploy Start" --endpoint="deploy"
+
+      - name: 📥 Download Artifact
         uses: actions/download-artifact@v4
         with:
           name: node-app
 
-      - name: 🚀 Start Deploy Trace (reuse Build trace)
-        run: node trace-cli.js start --step="Deploy Trace Start" --trace-id=$TRACE_ID
-
       - name: 📂 Unzip Artifact
         run: |
-          node trace-cli.js start-child --step="Unzip Artifact" --trace-id=$TRACE_ID --parent-span-id=$PARENT_SPAN_ID
+          node trace-cli.js start-child --step="Unzip Artifact" --trace-id="${{ needs.build.outputs.trace_id }}" --parent-span-id="${{ needs.build.outputs.parent_span_id }}" --endpoint="deploy"
           unzip -o release.zip
-          node trace-cli.js end-child --step="Unzip Artifact" --trace-id=$TRACE_ID
+          node trace-cli.js end-child --step="Unzip Artifact" --trace-id="${{ needs.build.outputs.trace_id }}"
 
-      - name: ☁️ Deploy to Azure
+      - name: 🚀 Deploy to Azure
         run: |
-          node trace-cli.js start-child --step="Azure Deployment" --trace-id=$TRACE_ID --parent-span-id=$PARENT_SPAN_ID
-          echo "Deploying..."
-          echo "Done"
-          node trace-cli.js end-child --step="Azure Deployment" --trace-id=$TRACE_ID
+          node trace-cli.js start-child --step="Azure Deployment" --trace-id="${{ needs.build.outputs.trace_id }}" --parent-span-id="${{ needs.build.outputs.parent_span_id }}" --endpoint="deploy"
+          echo "Deploying to Azure..."
+          echo "Deployment done"
+          node trace-cli.js end-child --step="Azure Deployment" --trace-id="${{ needs.build.outputs.trace_id }}"
 
       - name: 🛑 End Deploy Trace
-        run: node trace-cli.js end --step="Deploy Trace End" --trace-id=$TRACE_ID
+        run: node trace-cli.js end --step="Deploy" --trace-id="${{ needs.build.outputs.trace_id }}" --endpoint="deploy"
