--- a/.github/workflows/main_gen3emailreporting.yml
+++ b/.github/workflows/main_gen3emailreporting.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy with Dynatrace Tracing
+name: Build and deploy Node.js app to Azure Web App - gen3emailreporting
 
 on:
   push:
@@ -13,7 +13,7 @@ jobs:
       parent_span_id: ${{ steps.start_trace.outputs.parent_span_id }}
 
     steps:
-      - name: 📜 Checkout Code
+      - name: 🧾 Checkout Code
         uses: actions/checkout@v4
 
       - name: ⚙️ Set Secrets as Env Variables
@@ -28,25 +28,25 @@ jobs:
       - name: 🚀 Start Build Trace
         id: start_trace
         run: |
-          TRACE_OUTPUT=$(node trace-cli.js start --step="Build Start" --endpoint="build")
+          TRACE_OUTPUT=$(node trace-cli.js start --step="Build" --endpoint="build")
           echo "$TRACE_OUTPUT"
           echo "$TRACE_OUTPUT" | grep trace_id | sed 's/trace_id=//' | xargs -I{} echo "trace_id={}" >> $GITHUB_OUTPUT
           echo "$TRACE_OUTPUT" | grep parent_span_id | sed 's/parent_span_id=//' | xargs -I{} echo "parent_span_id={}" >> $GITHUB_OUTPUT
 
-      - name: 💼 Install Dependencies
+      - name: 📦 Install Dependencies
         run: |
           node trace-cli.js start-child --step="Install Dependencies" --trace-id="${{ steps.start_trace.outputs.trace_id }}" --parent-span-id="${{ steps.start_trace.outputs.parent_span_id }}" --endpoint="build"
           npm install
           node trace-cli.js end-child --step="Install Dependencies" --trace-id="${{ steps.start_trace.outputs.trace_id }}"
 
-      - name: 🧐 Build and Test
+      - name: 🧪 Build and Test
         run: |
           node trace-cli.js start-child --step="Build and Test" --trace-id="${{ steps.start_trace.outputs.trace_id }}" --parent-span-id="${{ steps.start_trace.outputs.parent_span_id }}" --endpoint="build"
           npm run build --if-present
           npm run test --if-present
           node trace-cli.js end-child --step="Build and Test" --trace-id="${{ steps.start_trace.outputs.trace_id }}"
 
-      - name: 📋 Zip Artifact
+      - name: 🗜️ Zip Release
         run: |
           node trace-cli.js start-child --step="Zip Artifact" --trace-id="${{ steps.start_trace.outputs.trace_id }}" --parent-span-id="${{ steps.start_trace.outputs.parent_span_id }}" --endpoint="build"
           zip release.zip . -r -x "node_modules/*" -x ".git/*"
@@ -64,9 +64,12 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
+    outputs:
+      trace_id: ${{ steps.start_trace.outputs.trace_id }}
+      parent_span_id: ${{ steps.start_trace.outputs.parent_span_id }}
 
     steps:
-      - name: 📜 Checkout Code
+      - name: 🧾 Checkout Code
         uses: actions/checkout@v4
 
       - name: ⚙️ Set Secrets as Env Variables
@@ -79,8 +82,12 @@ jobs:
         run: npm install @opentelemetry/sdk-node @opentelemetry/api @opentelemetry/resources @opentelemetry/semantic-conventions @opentelemetry/exporter-trace-otlp-proto dotenv node-fetch winston
 
       - name: 🚀 Start Deploy Trace
+        id: start_trace
         run: |
-          node trace-cli.js start --step="Deploy Start" --endpoint="deploy"
+          TRACE_OUTPUT=$(node trace-cli.js start --step="Deploy" --endpoint="deploy")
+          echo "$TRACE_OUTPUT"
+          echo "$TRACE_OUTPUT" | grep trace_id | sed 's/trace_id=//' | xargs -I{} echo "trace_id={}" >> $GITHUB_OUTPUT
+          echo "$TRACE_OUTPUT" | grep parent_span_id | sed 's/parent_span_id=//' | xargs -I{} echo "parent_span_id={}" >> $GITHUB_OUTPUT
 
       - name: 📥 Download Artifact
         uses: actions/download-artifact@v4
@@ -89,16 +96,16 @@ jobs:
 
       - name: 📂 Unzip Artifact
         run: |
-          node trace-cli.js start-child --step="Unzip Artifact" --trace-id="${{ needs.build.outputs.trace_id }}" --parent-span-id="${{ needs.build.outputs.parent_span_id }}" --endpoint="deploy"
+          node trace-cli.js start-child --step="Unzip Artifact" --trace-id="${{ steps.start_trace.outputs.trace_id }}" --parent-span-id="${{ steps.start_trace.outputs.parent_span_id }}" --endpoint="deploy"
           unzip -o release.zip
-          node trace-cli.js end-child --step="Unzip Artifact" --trace-id="${{ needs.build.outputs.trace_id }}"
+          node trace-cli.js end-child --step="Unzip Artifact" --trace-id="${{ steps.start_trace.outputs.trace_id }}"
 
       - name: 🚀 Deploy to Azure
         run: |
-          node trace-cli.js start-child --step="Azure Deployment" --trace-id="${{ needs.build.outputs.trace_id }}" --parent-span-id="${{ needs.build.outputs.parent_span_id }}" --endpoint="deploy"
+          node trace-cli.js start-child --step="Azure Deployment" --trace-id="${{ steps.start_trace.outputs.trace_id }}" --parent-span-id="${{ steps.start_trace.outputs.parent_span_id }}" --endpoint="deploy"
           echo "Deploying to Azure..."
           echo "Deployment done"
-          node trace-cli.js end-child --step="Azure Deployment" --trace-id="${{ needs.build.outputs.trace_id }}"
+          node trace-cli.js end-child --step="Azure Deployment" --trace-id="${{ steps.start_trace.outputs.trace_id }}"
 
       - name: 🛑 End Deploy Trace
-        run: node trace-cli.js end --step="Deploy" --trace-id="${{ needs.build.outputs.trace_id }}" --endpoint="deploy"
+        run: node trace-cli.js end --step="Deploy" --trace-id="${{ steps.start_trace.outputs.trace_id }}" --endpoint="deploy"
